package com.historyTalk.entity;

public enum UserType {
    GUEST,
    REGISTERED,
    STAFF
}
