' @startuml
' ' Class Diagram - HistoricalTell (Data Requirements Refactored)
' skinparam classAttributeIconSize 0
' skinparam wrapWidth 300
' skinparam defaultTextAlignment center

' enum UserType {
'   Guest
'   Registered
'   Staff
' }

' note left of UserType
'   UserType constrained to
'   Guest | Registered | Staff
' end note

' class Role {
'   +roleId : String
'   +roleName : String
'   +description : String
' }

' class Staff {
'   +staffId : String
'   +name : String
'   +email : String
' }

' class User {
'   +uid : String
'   +userName : String
'   +email : String
'   +password : String
'   +userType : UserType
' }

' class Character {
'   +characterId : String
'   +name : String
'   +background : Text
'   +image : String
'   +personality : String(500)
' }

' class CharacterDocument {
'   +docId : String
'   +title : String
'   +content : Text
'   +uploadDate : DateTime = now()
' }

' class HistoricalContext {
'   +contextId : String
'   +name : String
'   +description : Text
' }

' class HistoricalContextDocument {
'   +docId : String
'   +title : String
'   +content : Text
'   +uploadDate : DateTime = now()
' }

' class Quiz {
'   +quizId : String
'   +title : String
' }

' class Question {
'   +questionId : String
'   +content : Text
'   +options : Text
'   +correctAnswer : String
' }

' note right of Question
'   Options stored as JSON
'   string
' end note

' class QuizResult {
'   +resultId : String
'   +score : Int
'   +takenDate : DateTime = now()
' }

' class QuizAnswerDetail {
'   +detailId : String
'   +selectedOption : String
'   +isCorrect : Boolean
' }

' class ChatSession {
'   +sessionId : String
'   +createDate : DateTime = now()
' }

' class Message {
'   +messageId : String
'   +content : Text
'   +isFromBot : Boolean
'   +timestamp : DateTime = now()
' }

' ' === Relationships (Refactored to match image labels/multiplicity) ===

' Role "1" <-- "0..*" Staff : assigned to
' Staff "1" --> "0..1" User : account
' Staff "1" --> "0..*" HistoricalContext : creates
' Staff "1" --> "0..*" HistoricalContextDocument : uploads
' Staff "1" --> "0..*" CharacterDocument : uploads
' Staff "1" --> "0..*" Character : profiles
' Staff "1" --> "0..*" Quiz : authors

' HistoricalContext "1" --> "0..*" HistoricalContextDocument : includes
' HistoricalContext "1" --> "0..*" Quiz : includes

' Character "1" --> "0..*" CharacterDocument : documents
' Character "1" --> "0..*" ChatSession : selected in

' User "0..*" --> "0..*" Character : profiles
' User "1" --> "0..*" ChatSession : starts
' User "0..*" --> "0..*" QuizResult : takes

' ChatSession "1" --> "1..*" Message : messages

' Quiz "1" --> "1..*" Question : has
' Quiz "1" <-- "0..*" QuizResult : results
' QuizResult "1" --> "1..*" QuizAnswerDetail : answers
' QuizAnswerDetail "1..*" --> "1" Question : relates to

' @enduml
@startuml
' Class Diagram - HistoricalTell (Pure Data Requirements)
skinparam classAttributeIconSize 0
skinparam wrapWidth 300
skinparam defaultTextAlignment center
skinparam linetype ortho

enum UserType {
  Guest
  Registered
  Staff
}

class Role {
  +roleId : String
  +roleName : String
  +description : String
}

class Staff {
  +staffId : String
  +name : String
  +email : String
}

class User {
  +uid : String
  +userName : String
  +email : String
  +password : String
  +userType : UserType
}

class Character {
  +characterId : String
  +name : String
  +background : Text
  +image : String
  +personality : String(500)
}

class CharacterDocument {
  +docId : String
  +title : String
  +content : Text
  +uploadDate : DateTime
}

class HistoricalContext {
  +contextId : String
  +name : String
  +description : Text
}

class HistoricalContextDocument {
  +docId : String
  +title : String
  +content : Text
  +uploadDate : DateTime
}

class Quiz {
  +quizId : String
  +title : String
}

class Question {
  +questionId : String
  +content : Text
  +options : Text
  +correctAnswer : String
}

class QuizResult {
  +resultId : String
  +score : Int
  +takenDate : DateTime
}

class QuizAnswerDetail {
  +detailId : String
  +selectedOption : String
  +isCorrect : Boolean
}

class ChatSession {
  +sessionId : String
  +createDate : DateTime
}

class Message {
  +messageId : String
  +content : Text
  +isFromBot : Boolean
  +timestamp : DateTime
}

' === Relationships (Removed action labels for pure Data Model) ===

Role "1" -- "0..*" Staff
Staff "1" -- "0..1" User
Staff "1" -- "0..*" HistoricalContext
Staff "1" -- "0..*" HistoricalContextDocument
Staff "1" -- "0..*" CharacterDocument
Staff "1" -- "0..*" Character
Staff "1" -- "0..*" Quiz

HistoricalContext "1" -- "0..*" HistoricalContextDocument
HistoricalContext "1" -- "0..*" Quiz

Character "1" -- "0..*" CharacterDocument
Character "1" -- "0..*" ChatSession

User "0..*" -- "0..*" Character
User "1" -- "0..*" ChatSession
User "0..*" -- "0..*" QuizResult

ChatSession "1" -- "1..*" Message

Quiz "1" -- "1..*" Question
Quiz "1" -- "0..*" QuizResult
QuizResult "1" -- "1..*" QuizAnswerDetail
QuizAnswerDetail "*" -- "1" Question

@enduml